functions in js

--- a/1.Build a Passenger Counter App/3. Setting up our JavaScript file/index.html
+++ b/1.Build a Passenger Counter App/3. Setting up our JavaScript file/index.html
@@ -5,6 +5,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
     />
     <link rel="stylesheet" href="index.css" />
+    <title>Document</title>
   </head>
   <body>
     <h1>People entered:</h1>
